PROJECT("ITK EXAMPLES")

#This is the root ITK CMakeLists file.
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

# Find ITK.
FIND_PACKAGE(ITK)
INCLUDE(${ITK_USE_FILE})

ADD_EXECUTABLE(Test2DImage Test2DImage.cpp)
TARGET_LINK_LIBRARIES(Test2DImage ITKAlgorithms ITKIO)

